# video-agent-system

./: .gitignore  README.md  app.py  pyproject.toml
agent/: graph_builder.py  state.py
agent/graph/: edit_graph.py  history_guided_graph.py  prompt_graph.py  save_graph.py  video_agent_graph.py  video_graph.py
agent/node/: diff.py  edit.py  editor.py  history_guided.py  optimizer.py  prompt.py  save.py  video.py
agent/templates/: history_guided_prompt.jinja  video_prompt.jinja
backend/: agent_router.py  main.py  state.py
chroma_db/: chroma.sqlite3
data/: prompt_0115faf4.json  prompt_0d8c9c8a.json  prompt_167ffd6d.json  prompt_1c516547.json  prompt_2b8a3240.json  prompt_33229778.json  prompt_34547bd5.json  prompt_3a45dc02.json  prompt_3ad760dc.json  prompt_3c6bbc27.json  prompt_4f0e9e72.json  prompt_5d43679d.json  prompt_6ea5a6d1.json  prompt_7248938d.json  prompt_7616eb8b.json  prompt_7d28a9cd.json  prompt_9043e2cb.json  prompt_9543adb0.json  prompt_9594675d.json  prompt_9a81dd0e.json  prompt_a457971b.json  prompt_ba1bd478.json  prompt_bbb46355.json  prompt_c5301ff7.json  prompt_c6034a2f.json  prompt_cede7084.json  prompt_d0ee76c0.json  prompt_d9048f99.json  prompt_da0931a3.json
modules/: history_manager.py  intent_infer.py  prompt_editor.py  prompt_generator.py  prompt_optimizer.py  question_generator.py  recommender.py  runway_api.py  semantic_diff.py  vector_store.py  video_generator.py
styles/: diff.css  main.css
