[project]
name = "video-agent-system"
version = "0.1.0"
description = "Prompt Optimization-Based Video Agent System"
authors = [
    {name = "eunnnholee",email = "zxvaw@naver.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
